Fixtextalign

--- a/style.css
+++ b/style.css
@@ -37,23 +37,21 @@ body {
 }
 
   .content {
-    font-size="12";
-   
+    text-align: center; /* Center-align the content within each div */
   }
 
   content > div {
-    text-align: center; /* Center-align the content within each div */
     margin-bottom: 10px; /* Add spacing between lines */
   }
 
   .box {
     margin: 10px;
     border: 5px chocolate solid; 
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 60px;
+    padding-right: 60px;
 }
   p {
-  
+
   }
   
   ul {
@@ -61,7 +59,7 @@ body {
   }
   
   box p {
-    padding-bottom: 10px; /* Add padding to paragraphs */
+    padding-bottom: 10px; 
 }
 
 .box p:last-child {
